--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -1,9 +1,9 @@
-name: Staging deployment
+name: Stage the app
 
-on:
+on: 
   pull_request:
     types: [labeled]
-    
+
 env:
   DOCKER_IMAGE_NAME: okapetan-azure-ttt
   IMAGE_REGISTRY_URL: docker.pkg.github.com
@@ -17,10 +17,10 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    
     if: contains(github.event.pull_request.labels.*.name, 'stage')
-    
+
+    runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v1
       - name: npm install and build webpack
@@ -31,7 +31,7 @@ jobs:
         with:
           name: webpack artifacts
           path: public/
-    
+
   Build-Docker-Image:
     runs-on: ubuntu-latest
     needs: build
@@ -39,35 +39,35 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
-        
-      - name: Download build artifact
+
+      - name: Download built artifact
         uses: actions/download-artifact@main
         with:
           name: webpack artifacts
-          path: public/
-          
+          path: public
+
       - name: create image and store in Packages
         uses: mattdavis0351/actions/docker-gpr@1.3.0
         with:
           repo-token: ${{secrets.GITHUB_TOKEN}}
-          image-token: ${{env.DOCKER_IMAGE_NAME}}
-    
+          image-name: ${{env.DOCKER_IMAGE_NAME}}
+
   Deploy-to-Azure:
     runs-on: ubuntu-latest
     needs: Build-Docker-Image
-    name: Deploy app containter to Azure
+    name: Deploy app container to Azure
     steps:
       - name: "Login via Azure CLI"
         uses: azure/login@v1
         with:
-          creds: ${{secrets.AZURE_CREDENTIALS}}
-          
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
       - uses: azure/docker-login@v1
         with:
           login-server: ${{env.IMAGE_REGISTRY_URL}}
-          username: ${{github.actor}}
-          password: ${{secrets.GITHUB_TOKEN}}
-          
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Deploy web app container
         uses: azure/webapps-deploy@v2
         with:
@@ -77,5 +77,3 @@ jobs:
       - name: Azure logout
         run: |
           az logout
-    
-    
